--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
  */
 
  body {
-    background-color: lavender;
+    background-color: lightblue;
  }
 
 
  .bg-card {
-    background-color: violet;
+    background-color: rgb(142, 176, 187);
  }
